--- a/index.html
+++ b/index.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Waste management detecter</title>
-    <link rel="stylesheet" href="index.css" />
+    <title>AI Waste Detector</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
+    <!-- Example: a pre-trained MobileNet (image classifier) -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script>
+    <style>
+      video {
+        transform: scaleX(-1);
+        width: 480px;
+      }
+      #result {
+        font-size: 20px;
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Waste management detecter</h1>
-    <p>
-      This project aims to develop a system for detecting and managing waste
-      effectively.
-    </p>
-    <hr />
-    <video id="video" width="640" height="480" autoplay></video>
+    <h1>Waste Detection AI</h1>
+    <video id="video" autoplay></video>
+    <div id="result">Detecting...</div>
 
     <script>
-      // Ask for camera access
-      navigator.mediaDevices
-        .getUserMedia({ video: true })
-        .then(function (stream) {
-          let video = document.getElementById("video");
-          video.srcObject = stream;
-        })
-        .catch(function (err) {
-          console.error("Error accessing camera: " + err);
-        });
+      let video = document.getElementById("video");
+      let resultDiv = document.getElementById("result");
+
+      // Start camera
+      navigator.mediaDevices.getUserMedia({ video: true }).then((stream) => {
+        video.srcObject = stream;
+      });
+
+      // Load AI model
+      async function startAI() {
+        const model = await mobilenet.load(); // Replace with custom waste model
+
+        setInterval(async () => {
+          const prediction = await model.classify(video);
+          if (prediction.length > 0) {
+            let item = prediction[0].className.toLowerCase();
+
+            // Simple rules (replace with real waste categories)
+            let advice = "Unknown";
+            if (item.includes("bottle") || item.includes("plastic"))
+              advice = "Recycle Bin ♻️";
+            else if (item.includes("banana") || item.includes("apple"))
+              advice = "Compost Bin 🌱";
+            else if (item.includes("metal") || item.includes("can"))
+              advice = "Recycle Bin (Metal) 🥫";
+            else if (item.includes("paper")) advice = "Paper Recycling 📄";
+
+            resultDiv.innerHTML = `${prediction[0].className} → ${advice}`;
+          }
+        }, 2000);
+      }
+
+      startAI();
     </script>
-    <hr />
-    <h2>Features</h2>
-    <ul>
-      <li>Real-time waste detection</li>
-      <li>Automated sorting</li>
-      <li>Data analytics for waste management</li>
-    </ul>
   </body>
 </html>
