Last for i have finished it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <video id="video" autoplay></video>
     <div id="result">Detecting...</div>
 
-    
+    <!-- this is the ai script -->
     <script>
       let video = document.getElementById("video");
       let resultDiv = document.getElementById("result");
@@ -108,5 +108,10 @@
 
       startAI();
     </script>
-  </body>
+
+<footer>
+  <h3>Made by Ashray of 9 C, with my brains.. </h3>
+</footer>
+
+</body>
 </html>
