--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
   <h2>About</h2>
   <pre>
 This project was made for the topic waste management for the exhibition.
-The AI was made in Javascript and the model used is open source which is in github.
+The site asks you for camera then it detects object and tell which waste it is.
+this was created with in one week and has lot of flaws but it will work.
+The AI was made in Javascript and the libraries used is open source which is in github.
   </pre>
 </article>
 
