--- a/index.html
+++ b/index.html
@@ -121,16 +121,15 @@
 <article>
   <h2>About</h2>
   <pre>
-This project was made for the topic waste management for the exhibition.
-The site asks you for camera then it detects object and tell which waste it is.
-this was created with in one week and has lot of flaws but it will work.
+This project is based on the topic "Waste Management"
+This site requires camera permission. It detects an object and tells you which kind of waste it is.
+this was created with in 6 hours and is fairly accurate.
 The AI was made in Javascript and the libraries used is open source which is in github.
   </pre>
 </article>
 
-<!-- made By Me -->
 <footer>
-  <h3>Made by Ashray of 9 C, with my brains.. </h3>
+This project was made by Ashray (Most of the programming) and Mahadev (Most of the design stuff)
 </footer>
 
 </body>
